ui_tests/where_bounds_2.stderr
error: expected {
  ┌─ main.box:2:1
  │
2 │ where {
  │ ^^^^^ found where

